[package]
name = "gowiz_country"
license = "MIT"
description ="A library to get various information about countries"
homepage = "https://github.com/gowizz/country"
version = "0.0.1"
repository  = "https://github.com/gowizz/country"
readme = "https://github.com/gowizz/country/blob/main/README.md"
edition = "2018"

[dependencies]
