[package]
name = "gowiz_country"
license = "MIT"
description = "A library to get various information about countries"
homepage = "https://github.com/gowizz/country"
version = "0.0.4"
repository = "https://github.com/gowizz/country"
readme = "README.md"
edition = "2018"

exclude = [
    "tests",
]

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.145", features = ["derive"] }

